<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addinfo.AddInfoActivity"
    android:orientation="vertical"
    android:paddingTop="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_city"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/city"
            android:text="@string/add_city" />
        <TextView
            android:id="@+id/add_hospital"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/hospital"
            android:text="@string/add_hospital" />
        <TextView
            android:id="@+id/add_department"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/department"
            android:text="@string/add_department" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:id="@+id/add_technician"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/technician"
            android:text="@string/add_technician" />
        <TextView
            android:id="@+id/add_installer"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/install"
            android:text="@string/add_installer" />
        <TextView
            android:id="@+id/add_devices"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/device"
            android:text="@string/add_devices" />

    </LinearLayout>


</LinearLayout>