<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_activity_background"
    android:orientation="vertical"
    android:paddingTop="20px"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lay_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_info"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/main_icon_add_info"
            android:text="@string/add_info" />

        <TextView
            android:id="@+id/add_record"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/main_icon_add_record"
            android:text="@string/add_record" />

        <TextView
            android:id="@+id/query_record"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/main_icon_query"
            android:text="@string/query_record" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exit"
            style="@style/Main_Icon_Style"
            android:drawableTop="@mipmap/exit"
            android:text="@string/exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        style="@style/TvStyle_42_000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="" />
</RelativeLayout>